test/distributions/bharshbarg/stencil/slice.good
slice.chpl:63: error: halt reached - indexing out of bounds in dimension 1: [-1] but array bounds are 1..20
